--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ HOST_SERVER_USER=""
 HOST_SERVER_PASSWORD=""
 HOST_SERVER_MAC=""
 MC_SERVER_START_CMD=""
+MC_SERVER_START_CMD_SUDO=""
 MC_SERVER_ADDRESS=""
