ref: move actual code folder up

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,4 +41,4 @@ dev-dependencies = []
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/somnus"]
+packages = ["somnus"]
