--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pexpect==4.*",
     "mcstatus==11.*",
     "pydantic==2.*",
+    "aiofiles==24.*"
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
