--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ line-length = 120
 [tool.ruff.lint]
 # Rules are explained here: https://docs.astral.sh/ruff/rules
 select = ["E4", "E7", "E9", "F", "C", "N", "A", "SIM", "PL"]
+ignore = []
 
 [tool.rye.scripts]
 dev = "python3 -m somnus.__main__"
