--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pexpect==4.*",
     "mcstatus==11.*",
     "pydantic==2.*",
-    "aiofiles==24.*"
+    "aiofiles==24.*",
+    "aiogram_i18n==1.*"
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
