bug fixes, process bar upgrade, /help command finished

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ HOST_SERVER_MAC=""
 MC_SERVER_START_CMD=""
 MC_SERVER_START_CMD_SUDO=""
 MC_SERVER_ADDRESS=""
+LANGUAGE="en"
 DISCORD_SUPER_USER_ID=""
 DEBUG="0"
