--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,8 +17,8 @@ on:
     - cron: '29 19 * * 5'
 
 jobs:
-  ruff:
-    name: Ruff
+  ruff-lint:
+    name: Ruff Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,3 +36,23 @@ jobs:
 
       - name: Run Ruff
         run: ruff check --output-format=github
+
+  ruff-format:
+    name: Ruff Format
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          cache: pip
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff
+
+      - name: Run Ruff
+        run: ruff format --check
