docs: update pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
 name = "somnus"
 version = "0.1.0"
-description = "Add your description here"
+description = "Discord bot to remotely control and manage multiple Minecraft servers"
 authors = [
     { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" },
+    { name = "programmer-44", email = "github@keinbock.mozmail.com" },
 ]
 dependencies = [
     "discord-py==2.*",
