--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ HOST_SERVER_MAC=""
 MC_SERVER_START_CMD=""
 MC_SERVER_START_CMD_SUDO=""
 MC_SERVER_ADDRESS=""
+GET_PLAYERS_COMMAND_ENABLED=""
 INACTIVITY_SHUTDOWN_MINUTES=""
 DISCORD_STATUS_CHANNEL_ID=""
 LANGUAGE=""
