test: start testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,10 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 virtual = true
-dev-dependencies = []
+dev-dependencies = [
+    "pytest==8.*",
+    "podman==5.*",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
