--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -56,3 +56,22 @@ jobs:
 
       - name: Run Ruff
         run: ruff format --check
+
+  pyright:
+    name: Pyright
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          cache: pip
+      - name: Install Dependencies
+        run: pip install -r requirements-dev.lock
+
+      - name: Run Pyright
+        uses: jakebailey/pyright-action@v2
+        with:
+          version: 1.1.394
