test: basic start/stop test
now working!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,10 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 virtual = true
-dev-dependencies = []
+dev-dependencies = [
+    "podman>=5.4.0.1",
+    "pytest>=8.3.4",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
