--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ env:
   MC_SERVER_START_CMD: "cd /app && ./run.sh"
   MC_SERVER_ADDRESS: "25565"
   DISCORD_SUPER_USER_ID: "a"
-  DEBUG: "1"
+  DEBUG: "0"
   DEBUG_LOGGING: "1"
 
 jobs:
@@ -34,13 +34,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cache Docker Layers
-        uses: satackey/action-docker-layer-caching@v0.0.11
-        continue-on-error: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build Image
-        run: |
-          cd tests
-          docker build . -t somnus-test:latest --load
+        uses: docker/build-push-action@v6
+        with:
+          context: test
+          tags: somnus-test:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Install Python
         uses: actions/setup-python@v5
