--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Image
@@ -43,6 +45,7 @@ jobs:
           tags: somnus-test:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          load: true
 
       - name: Install Python
         uses: actions/setup-python@v5
