add somnus version to /ping command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pydantic==2.*",
     "aiofiles==24.*",
     "yet-another-i18n==0.*",
+    "toml>=0.10.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
