--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,11 +28,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           cache: pip
-
       - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.lock
+        run: pip install -r requirements-dev.lock
 
       - name: Run Ruff
         run: ruff check --output-format=github
@@ -48,11 +45,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           cache: pip
-
       - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.lock
+        run: pip install -r requirements-dev.lock
 
       - name: Run Ruff
         run: ruff format --check
@@ -72,6 +66,4 @@ jobs:
         run: pip install -r requirements-dev.lock
 
       - name: Run Pyright
-        uses: jakebailey/pyright-action@v2
-        with:
-          version: 1.1.394
+        run: pyright
